--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@portabletext/react": "^6.0.2",
     "@sanity/image-url": "^2.0.3",
+    "framer-motion": "^12.29.0",
     "next": "16.1.3",
     "next-sanity": "^12.0.12",
     "react": "19.2.3",
